<resources>
    <string name="app_name">ABC</string>
    <string name="app_desc">Apprendre - Bachoter - Comprendre</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Échec de la connexion"</string>
    <string name="login_success">"Connexion réussie !"</string>
    <string name="signin">"Se connecter"</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="phone_number">Numéro</string>
    <string name="confirmation_mot_de_passe">Confirmation mot de passe</string>
    <string name="nom">Nom</string>
    <string name="chargement">Chargement...</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Mode">ModeParam</string>


    <!-- preference -->
    <string name="sp_mode">mode affichage</string>
    <string name="titlecolor">Mode Sombre</string>

    <string name="sp_policy_normal">mode Moyen</string>
    <string name="title_policy_normal">Moyen</string>

    <string name="sp_policy_small">mode Petit</string>
    <string name="title_policy_small">Petit</string>

    <string name="sp_policy_big">mode Grand</string>
    <string name="title_policy_big">Grand</string>

    <string name="logout">Se déconnecter</string>
    <string name="logout_success">Déconnexion réussie !</string>
    <string name="logout_failed">Échec de la déconnexion</string>
    <string name="logout_inprogress">Déconnexion...</string>
    <string name="settings">Préférences</string>
    <string name="search">Rechercher</string>
    <string name="search...">Recherche...</string>
    <string name="logo">Logo</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>

    <string name="urlAPI">https://m1p9android-jm.herokuapp.com/api/</string>
    <string name="header_exercise">Compléter par la bonne réponse</string>
    <string name="a">A</string>
    <string name="blank">_</string>
    <string name="internet_error">Impossible de se connecter à internet</string>
    <string name="no_internet">Aucune connexion Internet.</string>
    <string name="session_expired">Session expirée.</string>

    <string name="signup">"S'inscrire"</string>
    <string name="signup_success">Inscription réussie !</string>
    <string name="signup_failed">Échec de l\'inscription</string>

    <string name="notification_text">Nous vous proposons %s activités. Enjoy !</string>
    <string name="notification_recherche">Nous avons trouver %s activités par rapport à votre recherche.</string>
</resources>